# Do-PFN-prior

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
configs/: default_config.py
dataloaders/: observational_dataloader.py
dopfnprior/causal_graph/: graph_builder.py
dopfnprior/configs/: default_config.py
dopfnprior/dataloaders/: observational_dataloader.py
dopfnprior/mechanisms/: activations.py  mlp_mechanism.py  tab_icl_activations.py
dopfnprior/scm/: noise_dist.py  scm.py  scm_builder.py
dopfnprior/utils/: bar_distribution.py  sampling.py  select_data.py
mechanisms/: mlp_mechanism.py  tab_icl_activations.py  xg_boost_mechanism.py
prior/mechanisms/: base_mechanism.py  mlp_mechanism.py
prior/scm/: scm.py
scm/: noise_dist.py  scm.py  scm_builder.py
utils/: bar_distribution.py  hyperparameter_sampling.py
